<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Ad-hoc Sensor NW on Magnetometer</string>
    <string name="app_name">Ad-Hoc Sensor NW</string>
    <string name="titleUsername">Username</string>
    <string name="titlePassword">Password</string>
    <string name="summaryUsername">Please enter your username</string>
    <string name="summaryPassword">Please enter your password</string>
    <string name="titleUrl">URL</string>
    <string name="titleManuPrefs">Preferences</string>
    <string name="titleServiceStart">Start Service</string>
    <string name="titleServiceStop">Stop Service</string>
    <string name="jobSensor">Sensor Type</string>
    <string name="jobLatitude">Latitude</string>
    <string name="jobLongitude">Longitude</string>
    <string name="jobLocRange">Dist Range (km)</string>
    <string name="jobStarttime">Start Time</string>
    <string name="jobEndtime">End Time</string>
    <string name="jobFreq">Frequency (min)</string>
    <string name="jobTimePeriod">Time Period (hr)</string>
    <string name="jobNodes">Nodes</string>
    <string name="jobDesc">Description</string>
</resources>
